# Marinara-Engine

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.lite  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  start-termux.sh  start.bat  start.sh  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  issue_report.md
.github/agents/: chai-workflow.md
.github/bunny-review/: bunny_review.py  ci-checks.json  reviewer-prompt.md  rules.json
.github/workflows/: build-apk.yml  build-container-lite.yml  build-container.yml  bunny-review-auto.yml  bunny-review-command.yml  bunny-review.yml  issue-status-from-prs.yml  prealpha-platform-builds.yml
android/: README.md  build-apk.sh
android/app/: build.gradle
docs/: CONFIGURATION.md  CONVERSATION.md  CONVERSATION_CALLS.md  FAQ.md  FRONTEND.md  GAME_MODE.md  GENERATION_PARAMETERS.md  IMAGE_GENERATION.md  INSTALLATION.md  LIVING_ANIME_PHASE_1_PLAN.md  MACROS.md  NOODLE.md  PROFESSOR_MARI.md  PROFESSOR_MARI_WORKSPACE_AGENT_SPEC.md  REMOTE_ACCESS.md  ROLEPLAY.md  SCENE_VIDEO_GENERATION.md  STORYBOARD_ENGINE_GUIDE.md  TROUBLESHOOTING.md  UPGRADING.md  card-css-theming-guide.md
e2e/: core-flows.e2e.ts  spatial-context.e2e.ts
scripts/: check-docs.mjs  check-launcher-update.mjs  check-locales.mjs  check-windows-installer-layout.mjs  check-workspace-install.mjs  clean-stale-client-artifacts.mjs  dev-shared-build.mjs  dev.mjs  ensure-native-deps.mjs  protect-launcher-data.mjs  read-launcher-env.mjs  render-release-notes.mjs  run-mari.mjs  run-tauri.mjs  run-vite.mjs  versioning.mjs
src-tauri/: Cargo.toml  tauri.prealpha.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/llm/src/: lib.rs
src-tauri/crates/storage/src/: lib.rs
src-tauri/src/: http_dispatch.rs  http_server.rs  lib.rs  seed_defaults.rs
src-tauri/src/commands/: storage.rs
src-tauri/src/commands/storage/: chats.rs  mari.rs  shared.rs  sprites.rs
src-tauri/src/commands/storage/commands/: entities.rs  media.rs
src-tauri/src/commands/storage/imports/: bulk_imports.rs  marinara.rs  marinara_tests.rs  payloads.rs  service.rs
src-tauri/src/commands/storage/integrations/: tts.rs
src-tauri/src/commands/storage/profile/: assets.rs  legacy.rs  zip_import.rs
tests/: user-message-regeneration-instruction.test.ts
(+209 files in other folders)
