[package]
name = "marinara-engine"
version = "0.1.0"
description = "Marinara Engine"
authors = ["you"]
edition = "2021"
default-run = "marinara-engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
  "crates/assets",
  "crates/core",
  "crates/integrations",
  "crates/llm",
  "crates/security",
  "crates/storage",
]

[workspace.metadata.marinara.bindings]
output_dir = "../src/shared/types/generated"
source = "Rust domain crates own Tauri boundary DTOs and export TypeScript bindings here."

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "marinara_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
autoagents = "0.3.7"
axum = "0.7"
base64 = "0.22"
buttplug = "10.0.2"
buttplug_core = "10.0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
log = "0.4"
pdf-extract = "0.10"
png = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time", "net", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
marinara-core = { path = "crates/core" }
marinara-security = { path = "crates/security" }
marinara-storage = { path = "crates/storage" }
marinara-assets = { path = "crates/assets" }
marinara-integrations = { path = "crates/integrations" }
marinara-llm = { path = "crates/llm" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dev-dependencies]
criterion = "0.8.2"
